src/tests/Advanced/ShouldFail/exn_E_parse.ml
try
  raise (E -1)
with
E n -> prInt n
